# TechneNotes

./: README.md  install.sh  meson.build  uninstall.sh
data/: codezone-tech.xml  includeSample.txt  javascript.lang  markdown-extra-tech.lang  markdownSample.txt  ovh.technenotes.myapp.gschema.xml  technenotes.desktop
src/: customNotebookTab.py  dbRepository.py  dialogCloseTab.py  dialogDeleteOpenedNote.py  dialogEditNote.py  dialogFirstSetup.py  dialogInsertMedia.py  dialogNewNote.py  dialogPreferences.py  menuBarLogic.py  renderMarkdown.py  sternBrocotGr.py  technenotes.py  toolBarLogic.py  treeviewDnDLogic.py
src/webview/css/: css-webview-base.css  css-webview-light-theme-1.css  css-webview-user-custom-theme.css  css-webview.css  custom-gtk-styles.css  font-families-definitions.css  prism.css  video-overlay-v3.css
src/webview/js/: prism.js
